# crabflow

./: Cargo.toml  Dockerfile  Dockerfile.aarch  LICENCE  README.md  workflow.example.yaml  workflow.yml
.github/workflows/: container.yaml  main.yaml
examples/: cf_sentiment-analysis.yaml  cf_stable-diffusion.yaml
src/: env.rs  http.rs  main.rs  resolve.rs  types.rs  workflow.rs
