[package]
name = "crabflow"
version = "0.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tokio = {version = "1.45.0", features = ["full"]}
reqwest = {version = "0.12.15", features = ["json", "multipart"]}
log = "0.4.27"
env_logger = "0.11.8"